# pihole6api

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  run_tests.py  run_tests_docker.py  setup.py
.github/workflows/: python-publish.yml
docs/: API_REFERENCE.md
src/pihole6api/: __init__.py  client.py  config.py  conn.py  domain_management.py  local_dns.py
tests/: .env.test  __init__.py  conftest.py  docker-compose.test.yml  docker_test_manager.py  test_auth_connection.py  test_authentication.py  test_config.py  test_dns_operations.py  test_dns_records.py  test_integration.py  test_integration_workflow.py  test_local_dns.py  test_real_integration.py  test_validation_performance.py
