[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pihole6api"
version = "0.2.0"
description = "Python API Client for Pi-hole 6"
authors = [{name = "Shane Barbetta", email = "shane@barbetta.me"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pihole", "dns", "adblocking", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests >=2.26.0",
]

[project.optional-dependencies]
test = [
    "pytest >=6.0",
    "pytest-cov >=3.0.0",
    "pytest-mock >=3.6.0",
    "coverage >=6.0",
]
dev = [
    "pytest >=6.0",
    "pytest-cov >=3.0.0",
    "pytest-mock >=3.6.0",
    "coverage >=6.0",
    "black >=22.0",
    "isort >=5.0",
    "flake8 >=4.0",
    "mypy >=0.900",
]

[project.urls]
Homepage = "https://github.com/sbarbett/pihole6api"
Documentation = "https://github.com/sbarbett/pihole6api"
Source = "https://github.com/sbarbett/pihole6api"
Issues = "https://github.com/sbarbett/pihole6api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pihole6api"]

[tool.uv]
dev-dependencies = [
    "pytest >=6.0",
    "pytest-cov >=3.0.0",
    "pytest-mock >=3.6.0",
    "coverage >=6.0",
    "black >=22.0",
    "isort >=5.0",
    "flake8 >=4.0",
    "mypy >=0.900",
    "python-dotenv>=1.0.1",
]
